--- a/index.html
+++ b/index.html
@@ -12,8 +12,53 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
-
+<header>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Portfolio</a>
+        <a href="#">Contact</a>
+      </nav>
+</header>
 <body>
-  <h1>My Resume</h1>
+  <div class="container">
+ <div class="top"> 
+  <h1>Margaret Becker - Student</h1>
+  <p>Full Stack Web Dev @ Lambda School and BCN and Spanish at the University of Michigan.</p>
+  <div class="button"><href id="#">Contact Me</href>
+</div></div>
+
+<div class="middle">
+    <div class="work-history">
+        <h2>Work History</h2>
+
+        <h3>Grant Writing and Diabetes Education Program Intern</h3>
+
+        <h3>English Education Programming Intern</h3>
+
+        <h3>Program for Women's Healthcare Effectiveness Research Assistant </h3>
+
+        <h3>Beachplace LLC Manager</h3>
+      </div> 
+  <div class= "skills">
+    <h2>Skills</h2>
+    <ul>
+        <li>Intoductory HTML & CSS</li>
+        <li>Fluent in Spanish</li>
+        <li>Adobe</li>
+        <li>Microsoft Office</li>
+    </ul>
+  </div>
+  
+  </div>
+  <footer>
+    CONTACT xxxx@gmail.com * xxx-xxx-xxxx * facebook.com/x
+  </footer>
+  
+</div>
+</div>
+
+
+
 </body>
 </html>
